# web_framework_rust

./: .gitignore  README.md  RequestSequence.puml  project_uml.puml
server/: Cargo.toml
server/src/: main.rs
server/src/public/: asset-manifest.json  index.html
server/src/public/assets/css/: styles.min.css
server/src/public/html/: index.html
server/src/public/old/html/: index.html
server/src/public/static/css/: main.53aea740.css  main.53aea740.css.map
server/src/public/static/js/: 787.26213513.chunk.js  787.26213513.chunk.js.map  main.0fb6d8f9.js  main.0fb6d8f9.js.map
web_framework_lib/: Cargo.toml
web_framework_lib/src/: lib.rs
web_framework_lib/src/application/: application_context.rs
web_framework_lib/src/application/di/: container.rs  providable_trait.rs  provider_trait.rs
web_framework_lib/src/proc_macros/: Cargo.toml
web_framework_lib/src/proc_macros/src/: lib.rs
web_framework_lib/src/proc_macros_derive/: Cargo.toml
web_framework_lib/src/proc_macros_derive/resource/: mime-types.csv
web_framework_lib/src/proc_macros_derive/src/: lib.rs
web_framework_lib/src/proc_macros_derive/src/implementations/: enum_from_str.rs  str_from_enum.rs
web_framework_lib/src/web/: server.rs
web_framework_lib/src/web/model/: http_headers.rs  request.rs  response.rs
web_framework_lib/src/web/models/: request.rs  transaction.rs
web_framework_lib/src/web/proc_macros/: handler_proc_macro.rs
web_framework_lib/src/web/request_handling/: chain_handler.rs  request_handler.rs  route_handler_container.rs
web_framework_lib/src/web/util/: request_parser.rs
(+40 files in other folders)
