[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.dev]
#debug = true # This is the default for dev profiles
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web_framework_lib = { path = "../web_framework_lib" }
di_ioc_lib = { path = "../di_ioc_lib" }
env_logger = "0.9.0"