[package]
name = "web_framework_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
di_ioc_lib = { path = "../di_ioc_lib" }
proc_macros_derive = { path = "src/proc_macros_derive" }
regex = "1.6.0"
log = "0.4.17"
env_logger = "0.9.0"